--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://6956ee9142b02fe5adc6452e.imgix.net/clicl%20here.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:site_name" content="HOTHUB">
+    <meta property="og:site_name" content="OnlyHub">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
