--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Txeneca - Empréstimos Rápidos</title>
+    <title>GOLD SERVICES - Empréstimos Rápidos</title>
     <meta name="description" content="Txeneca - Empréstimos rápidos de 6.000 a 200.000 MZN com aprovação em até 8 minutos. 100% seguro e sem burocracia.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
